plugins {
	id 'java'
	id 'jacoco'
	id 'org.springframework.boot' version '4.0.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

description = 'ecollecto-backend'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
}

configurations {
    mockitoAgent
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'

	compileOnly 'org.projectlombok:lombok:1.18.42'
    annotationProcessor 'org.projectlombok:lombok:1.18.42'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'com.fasterxml.jackson.core:jackson-databind'
	testImplementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
	testImplementation 'org.mockito:mockito-junit-jupiter:5.21.0'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	testCompileOnly 'org.projectlombok:lombok:1.18.42'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.42'

    mockitoAgent('org.mockito:mockito-core:5.21.0') { transitive = false }
}

tasks.named('test') {
	useJUnitPlatform()
	jvmArgs("-javaagent:${configurations.mockitoAgent.asPath}")
    jvmArgs("-XX:+EnableDynamicAgentLoading")
}

jacocoTestReport {
	dependsOn test
	reports {
		html.required = true
		xml.required = false
		csv.required = false
	}
}
